--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
+@font-face{
+    font-family: RobotoB;
+    src:url('../Fonts/Roboto-Bold.ttf');
+}
+
+@font-face{
+    font-family: RobotoM;
+    src:url('../Fonts/Roboto-Medium.ttf');
+}
+
+@font-face{
+    font-family: RobotoL;
+    src:url('../Fonts/Roboto-Light.ttf');
+}
+
+
+
+
 body {
     background-color: #181818;
     background-repeat: no-repeat;
@@ -491,4 +509,234 @@ a.button-gallery{
     font-size: 17px;
     letter-spacing: 0.2px;
     font-family: RobotoM, sans-serif;
+}
+
+main.main-partners{
+    height: 444.55px;
+    display: flex;
+    justify-content: center;
+    margin-top: 130px;
+}
+
+section.partners{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+div.partners-title{
+    font-family: RobotoL, sans-serif;
+    color: #FFFFFF;
+    font-size: 52px;
+}
+
+div.partners-subtitle{
+    width: 430px;
+    height: 60px;
+    font-family: RobotoL, sans-serif;
+    color: #FFFFFF;
+    letter-spacing: 0.2px;
+    text-align: center;
+    margin-top: 30px;
+}
+
+div.logo-partners{
+    margin-top: 70px;
+    display: flex;
+    justify-content: center;
+    gap: 75px;
+}
+
+div.partners-button{
+    width: 176px;
+    height: 52px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 67px;
+    background: transparent;
+    border: 1px solid #FFFFFF;
+    filter: drop-shadow(0px 4px 31px rgba(0, 0, 0, 0.15));
+}
+
+div.partners-button:hover{
+    cursor: pointer;
+    border-color: gray;
+}
+
+a.partners-button{
+    text-decoration: none;
+    color: #FFFFFF;
+    font-size: 17px;
+    letter-spacing: 0.2px;
+    font-family: RobotoM, sans-serif;
+}
+
+main.main-testimonials{
+    height: 950px;
+    display: flex;
+    justify-content: center;
+    margin-top: 135px;
+}
+
+section.testimonials{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+div.testimonials-title{
+    height: 62px;
+    font-family: RobotoL, sans-serif;
+    font-size: 52px;
+    color: #FFFFFF;
+}
+
+div.testimonials-comments{
+    width: 900px;
+    height: 652px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-top: 70px;
+    gap: 25px;
+}
+
+div.comment1,
+div.comment2,
+div.comment3,
+div.comment4{
+    border: 1px solid #DEDEDE;
+    border-radius: 10px;
+    background: transparent;
+}
+
+div.comment1{
+    width: 430px;
+    height: 328px;
+}
+
+div.comment2{
+    width: 430px;
+    height: 304px;
+}
+
+div.comment3{
+    width: 430px;
+    height: 304px;
+}
+
+div.comment4{
+    width: 430px;
+    height: 304px;
+    margin-top: -20px;
+}
+
+div.about-user{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    padding-top: 40px;
+    padding-left: 30px;
+}
+
+div.name{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 120px;
+    font-family: RobotoM, sans-serif;
+    color: #FFFFFF;
+    font-size: 16px;
+}
+
+div.comment-text{
+    width: 300px;
+    height: 168px;
+    line-height: 24px;
+    font-size: 16px;
+    font-family: RobotoL, sans-serif;
+    color: #FFFFFF;
+    padding: 31px 70px 40px 40px;
+}
+
+div.box-comment{
+    display: flex;
+    justify-content: center;
+}
+
+footer.footer{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 150px;
+    padding-top: 107px;
+    padding-bottom: 107px;
+}
+
+.links{
+    display: flex;
+    flex-direction: column;
+    margin-right: 75px;
+}
+
+.footer__links{
+    display: flex;
+}
+
+.links a,
+p.link__title{
+    color: white;
+    font-family: RoboyoM, sans-serif;
+    margin-top: 0;
+}
+
+p.link__title{
+    font-size: 20px;
+    margin-bottom: 40px;
+}
+
+div.links a{
+    text-decoration: none;
+    margin-bottom: 19px;
+}
+
+div.links a:hover{
+    color:gray
+}
+
+div.info__logos a{
+    margin-right: 24px;
+    text-decoration: none;
+}
+
+div.info__location,
+div.info__phone{
+    display: flex;
+    align-items: center;
+    font-family: RobotoM, sans-serif;
+    color: white;
+}
+
+div.info__location img,
+div.info__phone img{
+    margin-right: 17px;
+}
+
+div.info__logos{
+    margin-top: 40px;
+}
+
+div.info__phone{
+    margin-top: 15px;
+}
+
+#copyRight{
+    display: grid;
+    grid-column-start: 1;
+    grid-column-end: 7;
+    grid-row-start: 7;
+    justify-content: center;
+    color: white;
 }
